--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </section>
         <section id="skills">
             <h1>Skills</h1>
-            <p>HTML, CSS, JavaScript, Java, PHP, MySQL</p>
+            <p>HTML, CSS, JavaScript, Java</p>
         </section>
         <section id="contact">
             <h1>Contact</h1>
